FIX: Example source not aligning correctly

--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -219,12 +219,9 @@
     margin-block: 0em;
   }
 
-  // This gets the element immediately before the example source to display as inline, so that the source floats correctly.
-  :has(+ .ex-source) {
-    display: inline;
-  }
-
   .lit, .literal {
+    clear  : left;
+    display: inline;
     margin : 0em;
     padding: 0em;
   }
@@ -259,15 +256,19 @@
     margin-inline-start: var(--igl-horizontal-spacing);
   }
 
-  .txn, .transcription {
-    .txn;
-    margin:  0em;
-    padding: 0em;
-  }
-
   .tln, .translation {
     .tln;
     margin : 0em;
+    padding: 0em;
+  }
+
+  > .tln:has(+ .lit) {
+    display: flow-root;
+  }
+
+  .txn, .transcription {
+    .txn;
+    margin:  0em;
     padding: 0em;
   }
 
